fix(Tree): [Tree] content whit long text align-right issue, close #4689

--- a/components/tree/main.scss
+++ b/components/tree/main.scss
@@ -127,6 +127,7 @@
     }
 
     &-switcher.#{$css-prefix}noop-noline {
+        flex: none !important;
         width: $tree-switch-arrow-size;
         height: $tree-switch-arrow-size;
     }
